# secure_t

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  env.example  load_fixtures.py  openapi.json  pyproject.toml  setup.cfg
.github/workflows/: action.yaml  actions.yaml
backend/: app.py  models.py
backend/auth/: api.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  utils.py
backend/auth/api/: __init__.py  auth.py  users.py
backend/blog/: api.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
backend/blog/api/: __init__.py  comments.py  posts.py
backend/core/: __init__.py  common.py  config.py  container.py  context_vars.py  database.py  exceptions.py  logging.py  middleware.py  pagination.py  repository.py  security.py
backend/core/logging/: config.py
deploy/: .env  docker-compose.yaml
migrations/: env.py
migrations/versions/: 293488c49995_init.py  3c72cfb6a800_init.py  4317acf93df3_init2.py  4a04b9c2e2c9_init2.py  4d3f92b418fc_post_indexes.py  522b4a596df8_remove_post_id.py  5db2ff117c66_init2.py  6f0d30448cca_init2.py  95ce2a55656f_init.py  d86c75053019_post_constraints.py
tests/: __init__.py  base.py  conftest.py  test_auth.py  test_common.py
tests/test_auth/: test_api.py  test_auth.py  test_repositories.py  test_services.py  test_users.py
tests/test_blog/: conftest.py  test_comments.py  test_posts.py  test_repositories.py  test_services.py
tests/test_blog/test_api/: test_comments.py  test_posts.py
